[package]
name = "bookstore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "^0.5.0-rc.2", features = ["json"] }
sea-orm = { version = "^1.1.19", features = [
    "sqlx-mysql",
    "runtime-async-std-native-tls",
    "macros",
] }
sea-orm-migration = "^1.1.19"
jsonwebtoken = "9"
bcrypt = "0.14"
dotenvy = "0.15.6"
